--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>New website</h1>
+    <h1>404 error coming soon</h1>
+    <p>sooner rather than later</p>
+    <p>when will this website be coming?</p>
 
 </body>
 </html>
