--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Bennyscott</title>
 </head>
 <body>
-    <h1>404 error coming soon</h1>
-    <p>sooner rather than later</p>
-    <p>when will this website be coming?</p>
+    <h1>Ben's boring site</h1>
+    <nav>
+    <ul>
+        <li> <a href = "CA.html" >Computer Architectures</a></li>
+        <li> <a href = "Net.html" >Networking</a></li>
+        <li> <a href = "Mobile.html" >Mobile System</a></li>
+    </ul>
+</nav>
+    <h3>Live long and prosper</h3>
+   
+
+
+    
 
 </body>
 </html>
