--- a/CA.html
+++ b/CA.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <title>other</title>
+    <title>Computer Architectures</title>
 </head>
 <body>
-    <a href = "index.html">home</a>
+    <a href = "index.html">Home</a>
     <h1>Computer Architectures</h1>
    
 
@@ -22,16 +22,21 @@
               <td> Introduction, History of Computing, Overview of Components </td>
             </tr>
             <td>Week 2</td>
-            <td>Converting Base 10 into base 2, converting binary numbers to decimal, addition with binary</td>
+            <td>The layers of computer systems and computing as a discipline,
+              Introduction to data representation,
+              Introduction to binary values and number systems
+              </td>
             <tr>
                 <td>Week 3</td>
-                <td>Multiplication with binary, Positive and negative number representation in binary,Subtraction in binary,
-                  Converting decimal numbers into hexadecimal numbers,
-                  Converting hexadecimal numbers into decimal numbers,
-                  Converting hexadecimal numbers into binary,
-                  Converting decimal (base10) numbers into octal numbers,
-                  Converting octal numbers into decimal numbers</td>
+                <td>Binary and number systems continued…
+                  Introduction to the hexadecimal (Base16) number system,
+                  Introduction to the octal (Base8) number system
+                  </td>
             </tr>
+            <td>Week 4</td>
+            <td>**First test** Representing numeric data; negative values and real numbers
+              Introduction to signed numbers and twos complement binary representation
+              </td>
     </table>
     <br>
     <br>
