--- a/ICT.html
+++ b/ICT.html
@@ -7,6 +7,27 @@
     <title>ICT Apprenticeship</title>
 </head>
 <body>
+    <a href = "index.html">Home</a>
 <h1>L3 ICT Apprenticeship</h1>
+<h4>How to use the resources below</h4>
+<p>Click on the links to download the coversheets. Each coversheet will have an abundance of resources for that particular theme. To be effective you should ask yourself a couple of questions....</p>
 
+<ol>
+    <li>How does the material relate to my job role?</li><br>
+    <li>How may the material be used in future career journeys</li><br>
+    <li>How can I apply the resources in developing my workplace portfolio?</li><br>
+</ol>
+
+<table>
+    <tr>
+    <th>Theme</th>
+    <th>Resource</th>
+</tr>
+<tr>
+    <td>Operating Systems (1/2)</td>
+    <td><a href="https://1drv.ms/b/s!ArbZ1WQTGihC2jHLLVLrkN-A5zjd?e=eswtxH" download="GFG">
+        <button type="button">Download</button></td><br>
+        
+
+</table>
     </body>
