--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li> <a href = "CA.html" >Computer Architectures</a></li>
         <li> <a href = "Net.html" >Networking</a></li>
         <li> <a href = "Mobile.html" >Mobile System</a></li>
+        <li> <a href = "ICT.html" >ICT Apprenticeship</a></li>
     </ul>
 </nav>
     <h3>Live long and prosper</h3>
