--- a/ICT.html
+++ b/ICT.html
@@ -10,7 +10,7 @@
     <a href = "index.html">Home</a>
 <h1>L3 ICT Apprenticeship</h1>
 <h4>How to use the resources below</h4>
-<p>Click on the links to download the coversheets. Each coversheet will have an abundance of resources for that particular theme. The hyperlinks will also specify the KSB's that they are related too. To be effective you should ask yourself a couple of questions....</p>
+<p>Click on the links to download the coversheets. Each coversheet will have an abundance of resources for that particular theme. The hyperlinks will specify the KSB's that they are each article is related too. To be effective you should ask yourself a couple of questions....</p>
 
 <ol>
     <li>How does the material relate to my job role?</li><br>
