--- a/ICT.html
+++ b/ICT.html
@@ -24,10 +24,15 @@
     <th>Resource</th>
 </tr>
 <tr>
+   <td> Communication<td>
+</tr>
+<tr>
     <td>Operating Systems (1/2)</td>
     <td><a href="https://1drv.ms/b/s!ArbZ1WQTGihC2jHLLVLrkN-A5zjd?e=eswtxH" download="GFG">
         <button type="button">Download</button></td><br>
-        
+</tr>
+        <td>Operating Systems (2/2)</td>
+</tr>
 
 </table>
     </body>
