--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <li> <a href = "ICT.html" >ICT Apprenticeship</a></li>
     </ul>
 </nav>
-    <h3>Live long and prosper</h3>
-   
+    <h3>Disclaimer</h3>
+    <p>This site was built from knowledge gained in a university module; <i>"Intro to the internet"</i> (circa 2001). Below is an image of where that knowledge was formed and where it was kept until the year 2023</p>
+    
+   <img src = "https://d1v1e13ebw3o15.cloudfront.net/data/56380/pool_and_spa_master/..jpg" alt = mycomputer </img>
 
 
     
