modified:   index.html new file:   script.js

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <p>This site was built from knowledge gained in a university module; <i>"Intro to the internet"</i> (circa 2001). Below is an image of where that knowledge was formed and where it was kept until the year 2023</p>
     
    <img src = "https://d1v1e13ebw3o15.cloudfront.net/data/56380/pool_and_spa_master/..jpg" alt = mycomputer </img>
-
+<br>
 
     
-
+<footer>
+    You are vistor number: <span id="hits">0</span> to the boring site
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
