modified:   script.js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     
 <footer>
-    You are vistor number: <span id="hits">0</span> to the boring site
+    <div>Visitors to the boring site:</div>
+    <div class="website-counter"></div>
+
 </footer>
 <script src="script.js"></script>
 </body>
