modified:   index.html

--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
    <img src = "https://d1v1e13ebw3o15.cloudfront.net/data/56380/pool_and_spa_master/..jpg" alt = mycomputer </img>
 <br>
 <br>
+<footer>
+    <p>Number of visitors to the boring site</p>
+    <div id="sfctr17ea89ags36ty5kgp58qr1ksedsxb4"></div>
+<script type="text/javascript" src="https://counter10.optistats.ovh/private/counter.js?c=tr17ea89ags36ty5kgp58qr1ksedsxb4&down=async" async></script>
+<br>
+</footer>
 </body>
 </html>
