modified:   ICT.html modified:   index.html

--- a/ICT.html
+++ b/ICT.html
@@ -21,15 +21,21 @@
 <table>
     <tr>
     <th>Theme</th>
+    <th>Topic</th>
     <th>Resource</th>
 </tr>
 <tr>
-   <td> Communication<td>
+   <td>Communication</td>
+    <td>Behaviours & Communication</td>
+    <td><a href="https://1drv.ms/p/s!ArbZ1WQTGihC2wVuo8XxnluDXQtY?e=XseEVk" download="GFG">
+        <button type="button">Download</button></td>
 </tr>
 <tr>
     <td>Operating Systems (1/2)</td>
-    <td><a href="https://1drv.ms/b/s!ArbZ1WQTGihC2jHLLVLrkN-A5zjd?e=eswtxH" download="GFG">
-        <button type="button">Download</button></td><br>
+    <td>Windows 10/11</td>
+    <td><a href="https://1drv.ms/b/s!ArbZ1WQTGihC2jHLLVLrkN-A5zjd?e=Z2p9DO" download="GFG">
+        <button type="button">Download</button></td>
+    
 </tr>
         <td>Operating Systems (2/2)</td>
 </tr>
