--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 <br>
 <br>
 <footer>
-    <p>Number of visitors to the boring site</p>
+    <p>Number of visitors to the boring site:</p>
     <div id="sfctr17ea89ags36ty5kgp58qr1ksedsxb4"></div>
 <script type="text/javascript" src="https://counter10.optistats.ovh/private/counter.js?c=tr17ea89ags36ty5kgp58qr1ksedsxb4&down=async" async></script>
 <br>
+<a href="https://twitter.com/kiteflyr?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @kiteflyr</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </footer>
 </body>
 </html>
