modified:   CA.html

--- a/CA.html
+++ b/CA.html
@@ -34,10 +34,32 @@
                   </td>
             </tr>
             <td>Week 4</td>
-            <td>**First test** Representing numeric data; negative values and real numbers
+            <td><b>**First test**</b> Representing numeric data; negative values and real numbers
               Introduction to signed numbers and twos complement binary representation
               </td>
-    </table>
+            <tr>
+                <td>Week 5</td>
+                <td>Introduction to Floating-Point Numbers and the IEEE754 Technical Standard
+                  </td>
+                </tr>
+            <tr>
+                    <td>Week 6</td>
+                    <td>Introduction to the Central Processing Unit (CPU) Introduction to Assembly Language Programming
+                    </tr>
+<tr>
+                      </td>
+                      <td>Week 7</td>
+                      <td>Introduction to Instruction Set Architectures,Overview of CISC and RISC, Assembly Language Programming continued
+                        ,Overview of the MIPS Processor
+                        </td>
+                        </tr>
+                        </table>
+                        <tr>
+                          <td>Week 8
+                          </td>
+                          <td><b>***Test 2***</b>Representing text data, Representing audio data, Representing image and video data
+                            </td>
+                        </tr>
     <br>
     <br>
     <div class = "p1">
