modified:   style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <title>Bennyscott</title>
+    <title>Ben's Boring site</title>
 </head>
 <body>
     <h1>Ben's boring site</h1>
@@ -22,6 +22,10 @@
    <img src = "https://d1v1e13ebw3o15.cloudfront.net/data/56380/pool_and_spa_master/..jpg" alt = mycomputer </img>
 <br>
 <br>
+
+<h3>What is this site all about?</h3>
+<p>This site is not intended in anyway to be cool. It is merely a place where I keep my resources so I can easily access them. I might make it <i>"cool"</i> one day but for now it will remain very <b>boring!!</b></p>
+
 <footer>
     <p>Number of visitors to the boring site:</p>
     <div id="sfctr17ea89ags36ty5kgp58qr1ksedsxb4"></div>
