modified:   style.css

--- a/ICT.html
+++ b/ICT.html
@@ -37,7 +37,16 @@
         <button type="button">Download</button></td>
     
 </tr>
-        <td>Operating Systems (2/2)</td>
+    <td>Operating Systems (2/2)</td>
+    <td>Windows server</td>
+    
+</tr>
+<tr>
+    <td>Security
+    <td>Cyber Security</td>
+    <td><a href="https://1drv.ms/b/s!ArbZ1WQTGihC2xXW4X47zqHorVGm?e=gTQNoT" download="GFG">
+        <button type="button">Download</button></td>
+    </td>
 </tr>
 
 </table>
