modified:   CA.html

--- a/CA.html
+++ b/CA.html
@@ -55,11 +55,49 @@
                         </tr>
                         </table>
                         <tr>
-                          <td>Week 8
-                          </td>
+                          <td>Week 8 </td>
                           <td><b>***Test 2***</b>Representing text data, Representing audio data, Representing image and video data
                             </td>
                         </tr>
+                        <tr>
+                          <td>Week 9</td>
+                            <td> Introduction to Boolean Logic
+                              Overview of Logic in Computer Systems
+                              </td>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Week 10</td>
+                            <td>Introduction to Boolean Algebra
+                              </td>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Week 11</td>  
+                            <td>Introduction to Boolean Expression Simplification
+                              Introduction to Karnaugh Maps
+                              
+                              </td>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Week 12</td>
+                            <td><b>***Test 3***</b>Introduction to Error Checking in Data Transmission
+                              </td>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Week 13
+                            <td>Error Checking in Data Transmission
+                              The Practical Application of Combinational Logic Circuits within a CPU
+                              
+                              </td>
+                          </td>
+                          </tr>
+                          <tr>
+                            <td>Week 14</td>
+                            <td><b>***Test 4***</b>Introduction to Sequential Logic Circuits
+                              </td>
     <br>
     <br>
     <div class = "p1">
