modified:   CA.html

--- a/CA.html
+++ b/CA.html
@@ -21,7 +21,7 @@
               <td><a href = "https://1drv.ms/p/s!ArbZ1WQTGihC22HvhwS5023WsGXk?e=dugJhB" > Week 1</a></td>
               <td> Introduction, History of Computing, Overview of Components </td>
             </tr>
-            <td>a href = "https://1drv.ms/p/s!ArbZ1WQTGihC23n7C4nl5aXfyFnn?e=Qz6qjc" >Week 2</td>
+            <td><a href = "https://1drv.ms/p/s!ArbZ1WQTGihC23n7C4nl5aXfyFnn?e=Qz6qjc" >Week 2</td>
             <td>The layers of computer systems and computing as a discipline,
               Introduction to data representation,
               Introduction to binary values and number systems
