--- a/ICT.html
+++ b/ICT.html
@@ -39,6 +39,8 @@
 </tr>
     <td>Operating Systems (2/2)</td>
     <td>Windows server</td>
+    <td><a href ="https://1drv.ms/b/s!ArbZ1WQTGihC3Aj9mLuUTR-g4YaL?e=E1cd0Z" download = "GFG"</td>
+        <button type="button">Download</button></td>
     
 </tr>
 <tr>
