modified:   ICT.html

--- a/ICT.html
+++ b/ICT.html
@@ -39,7 +39,7 @@
 </tr>
     <td>Operating Systems (2/2)</td>
     <td>Windows server</td>
-    <td><a href ="https://1drv.ms/b/s!ArbZ1WQTGihC3Aj9mLuUTR-g4YaL?e=E1cd0Z" download = "GFG"</td>
+    <td><a href ="https://1drv.ms/p/s!ArbZ1WQTGihC3Ad9RDXTxe9qLXam?e=6pGh6N" download = "GFG"</td>
         <button type="button">Download</button></td>
     
 </tr>
